# gitAIcommit

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: config.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/formatting/: mod.rs  prompt.rs
src/git/: collector.rs  diff.rs  files.rs  mod.rs  status.rs
src/ollama/: binary.rs  client.rs  client_test.rs  manager.rs  mod.rs  model_manager.rs
src/utils/: cross_platform.rs  error.rs  mod.rs
tests/: cli_args_test.rs  config_test.rs  git_info_test.rs  interactive_test.rs  list_models_test.rs  model_manager_test.rs  ollama_connectivity.rs  prompt_builder_test.rs
